[project]
name = "dhl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.3.13",
    "langchain-openai>=1.3.5",
    "langgraph>=1.2.9",
]

[dependency-groups]
dev = [
    "grandalf>=0.8",
    "ipykernel>=7.3.0",
    "langgraph-cli[inmem]>=0.4.31",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]